0.6 (2008/12/2)

 Use ``zope.component.getSiteManager`` instead of
 ``zope.component.getGlobalSiteManager`` to find an adapter registry.
 This helps bfg inasmuch as it will use the bfg registry rather than
 the base registry when getSiteManager has been hooked; it will fall
 back to getting the global site manager if it has not been hooked.

0.5 (2008/12/2)

 Add ``IContent`` interface.  When an ``IFoo`` interface is declared via
 ZCML as ``lemonade:content``, add the ``IContent`` interface to the
 ``__bases__`` of the ``IFoo`` interface when the ZCML executes.

 Change how ``is_content`` works: use IContent.providedBy(object)
 instead of scanning the application registry for factories.

0.4 (unknown)

 Add ``is_content`` and ``get_content_type`` APIs to content module.

0.3 (2008/10/11)

 Evolution machinery moved to ``repoze.evolution``.

 Workflow machinery moved to ``repoze.workflow``.

 Folder machinery moved to ``repoze.folder``.

 (Remaining: content registrations)

0.2 (2008/10/05)

  Added ``evolution`` module; useful to evolve ZODB and other
  persistent data structures in lockstep with code changes.  Needs
  documentation.

0.1

  Initial release.
