@@ -1,12 +1,12 @@
 import unittest
-from zope.component.testing import PlacelessSetup
+from zope.testing.cleanup import cleanUp
 
-class TestContent(unittest.TestCase, PlacelessSetup):
+class TestContent(unittest.TestCase):
     def setUp(self):
-        PlacelessSetup.setUp(self)
+        cleanUp()
 
     def tearDown(self):
-        PlacelessSetup.tearDown(self)
+        cleanUp()
 
     def _setupContentTypes(self):
         import zope.component
